# rag-system

./: .gitignore  RAG系统功能现状与优化测试计划.md  README.md  index.html  main.py  pyproject.toml  server.py  代码架构.md  优化方向.md  信息使能AI平台需求.md
.codex/skills/rag-eval-pipeline/: SKILL.md
.github/agents/: query-debug.agent.md  rag-dev.agent.md  rag-eval.agent.md
core/: config.py  parsers.py  query_understanding.py  rag_chain.py  router.py  self_reflection.py  store.py  synonyms.json  user_dict.txt
docs/: 接口测试流程.md
docs/产品/方案/: 文档中心方案.docx  文档中心方案.docx.meta.json
docs/人力资源/通知/: 关于做好2026届毕业生一次性求职补贴申报工作的通知.docx  关于做好2026届毕业生一次性求职补贴申报工作的通知.docx.meta.json
docs/培训/培训主题/: WPS-3000现场工程师认证培训大纲.md  WPS-3000现场工程师认证培训大纲.md.meta.json  WPS-3200新员工培训大纲.md  WPS-3200新员工培训大纲.md.meta.json  售后快速排障培训手册.md  售后快速排障培训手册.md.meta.json  探针卡维护培训主题资料.md  探针卡维护培训主题资料.md.meta.json  版本发布流程培训大纲.md  版本发布流程培训大纲.md.meta.json  质量闭环与8D方法培训讲义.md  质量闭环与8D方法培训讲义.md.meta.json
docs/培训/岗位/: 售后服务工程师岗位说明书.md  售后服务工程师岗位说明书.md.meta.json  测试开发工程师岗位说明书.md  测试开发工程师岗位说明书.md.meta.json  现场服务工程师岗位说明书.md  现场服务工程师岗位说明书.md.meta.json  质量工程师岗位说明书.md  质量工程师岗位说明书.md.meta.json  资料开发工程师岗位说明书.md  资料开发工程师岗位说明书.md.meta.json  项目经理岗位说明书.md  项目经理岗位说明书.md.meta.json
scripts/: _v.py  run_metadata_tests.py  run_rag_eval_pipeline.py
static/: index.html
tests/: metadata_and_retrieval_cases.json  metadata_and_retrieval_report.json  retrieval_accuracy_report.md  retrieval_only_report.json  synonym_eval_cases.jsonl
tools/: checker.py  checker_config.json  query_understanding_eval.py  router_eval.py  self_reflection_eval.py  synonym_eval.py
(+203 files in other folders)
