[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "fastapi>=0.136.0",
    "google-genai>=1.24.0",
    "jieba>=0.42.1",
    "openai>=2.32.0",
    "pymupdf>=1.27.2.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-pptx>=1.0.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.0.0",
    "unstructured[pdf]>=0.22.21",
    "uvicorn[standard]>=0.35.0",
]
